--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.3",
+    "mongoose-unique-validator": "^5.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
